--- a/index.html
+++ b/index.html
@@ -5,8 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog o kawie</title>
+
+    <script src="https://kit.fontawesome.com/967c684db8.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <header></header>
+    <nav></nav>
+    <main>
+        <section class="contact">
+            <h2>Skontaktuj się z nami</h2>
+            <div>
+                <div class="single_contact">
+                    <i class="fa-solid fa-envelope"></i>
+                    <p>kontakt@coffeeblog.pl</p>
+                </div>
+                <div class="single_contact">
+                    <i class="fa-solid fa-phone"></i>
+                    <p>+48 123-456-798</p>
+                </div>
+                <div class="single_contact">
+                    <i class="fa-solid fa-house"></i>
+                    <p>ul. Polna, 12-456 Sopot</p>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer></footer>
 </body>
 </html>
