dodaj css do sekcji kontakt

--- a/index.html
+++ b/index.html
@@ -7,23 +7,24 @@
     <title>Blog o kawie</title>
 
     <script src="https://kit.fontawesome.com/967c684db8.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header></header>
     <nav></nav>
     <main>
-        <section class="contact">
+        <section class="contact flex_column_container">
             <h2>Skontaktuj się z nami</h2>
             <div>
-                <div class="single_contact">
+                <div class="single_contact flex_column_container">
                     <i class="fa-solid fa-envelope"></i>
                     <p>kontakt@coffeeblog.pl</p>
                 </div>
-                <div class="single_contact">
+                <div class="single_contact flex_column_container">
                     <i class="fa-solid fa-phone"></i>
                     <p>+48 123-456-798</p>
                 </div>
-                <div class="single_contact">
+                <div class="single_contact flex_column_container">
                     <i class="fa-solid fa-house"></i>
                     <p>ul. Polna, 12-456 Sopot</p>
                 </div>
