--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog o kawie</title>
 
+    <!-- font awesome -->
     <script src="https://kit.fontawesome.com/967c684db8.js" crossorigin="anonymous"></script>
+    <!-- własne style css -->
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" media="screen and (min-width:768px)" href="./css/medium.css">
+    <link rel="stylesheet" media="screen and (min-width:992px)" href="./css/large.css">
 </head>
 <body>
     <header></header>
@@ -15,7 +19,7 @@
     <main>
         <section class="contact flex_column_container">
             <h2>Skontaktuj się z nami</h2>
-            <div>
+            <div class="all_contacts flex_row_container">
                 <div class="single_contact flex_column_container">
                     <i class="fa-solid fa-envelope"></i>
                     <p>kontakt@coffeeblog.pl</p>
