--- a/index.html
+++ b/index.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog o kawie</title>
-
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/967c684db8.js" crossorigin="anonymous"></script>
+    <!-- fonty google -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <!-- własne style css -->
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" media="screen and (min-width:768px)" href="./css/medium.css">
     <link rel="stylesheet" media="screen and (min-width:992px)" href="./css/large.css">
 </head>
+
 <body>
-    <header></header>
+    <header class="flex_column_container">
+        <div>
+            <h1>Blog o kawie</h1>
+            <h2>Poznaj alternatywne metody parzenia kawy</h2>
+        </div>
+        <a href="#main">czytaj więcej</a>
+    </header>
     <nav></nav>
-    <main>
+    <main id="main">
         <section class="contact flex_column_container">
             <h2>Skontaktuj się z nami</h2>
             <div class="all_contacts flex_row_container">
@@ -34,7 +47,12 @@
                 </div>
             </div>
         </section>
+        <section class="map flex_column_container">
+            <h2>Zobacz jak do nas dojechać</h2>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2504.7827659098443!2d17.038229615755522!3d51.11246807957227!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470fe9ddc76b1533%3A0x1d5277d5314b5169!2sFiga%20Coffee%20-%20pop%20up%20cafe!5e0!3m2!1spl!2spl!4v1680416699111!5m2!1spl!2spl" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </section>
     </main>
     <footer></footer>
 </body>
+
 </html>
