--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- własne style css -->
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" media="screen and (min-width:768px)" href="./css/medium.css">
-    <link rel="stylesheet" media="screen and (min-width:992px)" href="./css/large.css">
+    <link rel="stylesheet" media="screen and (min-width:1200px)" href="./css/xlarge.css">
 </head>
 
 <body>
@@ -30,6 +30,26 @@
     </header>
     <nav></nav>
     <main id="main">
+        <section class="cafe flex_column_container">
+            <h2>Najlepsze kawiarnie w Gdańsku</h2>
+            <div class="all_cafes flex_row_container">
+                <div class="single_cafe flex_column_container">
+                    <h4>Drukarnia</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui corporis laboriosam quasi minima. Facilis illo unde sapiente fuga, iste minus dignissimos. Cum eum illo nemo ex quaerat aspernatur quasi quidem!</p>
+                    <a href="https://goo.gl/maps/fWtjFE7FbtwtSeu49" target="_blank"><i class="fa-solid fa-location-dot"></i> Mariacka 36</a>
+                </div>
+                <div class="single_cafe flex_column_container">
+                    <h4>Drukarnia</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui corporis laboriosam quasi minima. Facilis illo unde sapiente fuga, iste minus dignissimos. Cum eum illo nemo ex quaerat aspernatur quasi quidem!</p>
+                    <a href="https://goo.gl/maps/fWtjFE7FbtwtSeu49" target="_blank"><i class="fa-solid fa-location-dot"></i> Mariacka 36</a>
+                </div>
+                <div class="single_cafe flex_column_container">
+                    <h4>Drukarnia</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui corporis laboriosam quasi minima. Facilis illo unde sapiente fuga, iste minus dignissimos. Cum eum illo nemo ex quaerat aspernatur quasi quidem!</p>
+                    <a href="https://goo.gl/maps/fWtjFE7FbtwtSeu49" target="_blank"><i class="fa-solid fa-location-dot"></i> Mariacka 36</a>
+                </div>
+            </div>
+        </section>
         <section class="contact flex_column_container">
             <h2>Skontaktuj się z nami</h2>
             <div class="all_contacts flex_row_container">
