--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
     <title>Blog o kawie</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
-    <!-- font awesome -->
-    <script src="https://kit.fontawesome.com/967c684db8.js" crossorigin="anonymous"></script>
+
     <!-- fonty google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/735d679a94.js" crossorigin="anonymous"></script>
     <!-- własne style css -->
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" media="screen and (min-width:768px)" href="./css/medium.css">
@@ -30,26 +34,86 @@
     </header>
     <nav></nav>
     <main id="main">
+        <!-- sekcja animacji -->
+        <section class="animation">
+            <div id="carouselExampleCaptions" class="carousel slide">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./img/espresso.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption">
+                            <h5>Espresso</h5>
+                            <p class="d-none d-md-block">Some representative placeholder content for the first slide.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/cappucino.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption">
+                            <h5>Cappucino</h5>
+                            <p class="d-none d-md-block">Some representative placeholder content for the second slide.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/latte.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption">
+                            <h5>Latte</h5>
+                            <p class="d-none d-md-block">Some representative placeholder content for the third slide.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+        <!-- sekcja kawiarni -->
         <section class="cafe flex_column_container">
             <h2>Najlepsze kawiarnie w Gdańsku</h2>
             <div class="all_cafes flex_row_container">
                 <div class="single_cafe flex_column_container">
                     <h4>Drukarnia</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui corporis laboriosam quasi minima. Facilis illo unde sapiente fuga, iste minus dignissimos. Cum eum illo nemo ex quaerat aspernatur quasi quidem!</p>
-                    <a href="https://goo.gl/maps/fWtjFE7FbtwtSeu49" target="_blank"><i class="fa-solid fa-location-dot"></i> Mariacka 36</a>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui corporis laboriosam quasi minima.
+                        Facilis illo unde sapiente fuga, iste minus dignissimos. Cum eum illo nemo ex quaerat aspernatur
+                        quasi quidem!</p>
+                    <a href="https://goo.gl/maps/fWtjFE7FbtwtSeu49" target="_blank"><i
+                            class="fa-solid fa-location-dot"></i> Mariacka 36</a>
                 </div>
                 <div class="single_cafe flex_column_container">
                     <h4>Drukarnia</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui corporis laboriosam quasi minima. Facilis illo unde sapiente fuga, iste minus dignissimos. Cum eum illo nemo ex quaerat aspernatur quasi quidem!</p>
-                    <a href="https://goo.gl/maps/fWtjFE7FbtwtSeu49" target="_blank"><i class="fa-solid fa-location-dot"></i> Mariacka 36</a>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui corporis laboriosam quasi minima.
+                        Facilis illo unde sapiente fuga, iste minus dignissimos. Cum eum illo nemo ex quaerat aspernatur
+                        quasi quidem!</p>
+                    <a href="https://goo.gl/maps/fWtjFE7FbtwtSeu49" target="_blank"><i
+                            class="fa-solid fa-location-dot"></i> Mariacka 36</a>
                 </div>
                 <div class="single_cafe flex_column_container">
                     <h4>Drukarnia</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui corporis laboriosam quasi minima. Facilis illo unde sapiente fuga, iste minus dignissimos. Cum eum illo nemo ex quaerat aspernatur quasi quidem!</p>
-                    <a href="https://goo.gl/maps/fWtjFE7FbtwtSeu49" target="_blank"><i class="fa-solid fa-location-dot"></i> Mariacka 36</a>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui corporis laboriosam quasi minima.
+                        Facilis illo unde sapiente fuga, iste minus dignissimos. Cum eum illo nemo ex quaerat aspernatur
+                        quasi quidem!</p>
+                    <a href="https://goo.gl/maps/fWtjFE7FbtwtSeu49" target="_blank"><i
+                            class="fa-solid fa-location-dot"></i> Mariacka 36</a>
                 </div>
             </div>
         </section>
+        <!-- sekcja kontaktu -->
         <section class="contact flex_column_container">
             <h2>Skontaktuj się z nami</h2>
             <div class="all_contacts flex_row_container">
@@ -67,12 +131,20 @@
                 </div>
             </div>
         </section>
+        <!-- sekcja mapy -->
         <section class="map flex_column_container">
             <h2>Zobacz jak do nas dojechać</h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2504.7827659098443!2d17.038229615755522!3d51.11246807957227!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470fe9ddc76b1533%3A0x1d5277d5314b5169!2sFiga%20Coffee%20-%20pop%20up%20cafe!5e0!3m2!1spl!2spl!4v1680416699111!5m2!1spl!2spl" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2504.7827659098443!2d17.038229615755522!3d51.11246807957227!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470fe9ddc76b1533%3A0x1d5277d5314b5169!2sFiga%20Coffee%20-%20pop%20up%20cafe!5e0!3m2!1spl!2spl!4v1680416699111!5m2!1spl!2spl"
+                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
     </main>
     <footer></footer>
+    <!-- bootstrap js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
