--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Blog o kawie</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
-
+    <!-- PWA -->
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#29701a">
     <!-- fonty google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
